Applying the correct domain name

--- a/tools/ingress/ingress.yaml
+++ b/tools/ingress/ingress.yaml
@@ -8,25 +8,25 @@ metadata:
     ingress.kubernetes.io/auth-secret: basic-auth
     ingress.kubernetes.io/auth-realm: "Authentication Required"
     alb.ingress.kubernetes.io/scheme: internet-facing
-    external-dns.alpha.kubernetes.io/hostname: "monitor.kubernetes.synup.com."
+    external-dns.alpha.kubernetes.io/hostname: "monitor.k8s.hackerrank.link."
     alb.ingress.kubernetes.io/subnets: subnet-d30c46aa, subnet-b1becafa, subnet-81cce9db
 spec:
   rules:
-  - host: prometheus.kubernetes.synup.com
+  - host: prometheus.k8s.hackerrank.link
     http:
       paths:
       - path: /
         backend:
           serviceName: prometheus-k8s
           servicePort: 9090
-  - host: alertmanager.kubernetes.synup.com
+  - host: alertmanager.k8s.hackerrank.link
     http:
       paths:
       - path: /
         backend:
           serviceName: alertmanager-main
           servicePort: 9093
-  - host: grafana.kubernetes.synup.com
+  - host: grafana.k8s.hackerrank.link
     http:
       paths:
       - path: /
