--- a/manifests/grafana/grafana.pvc.yaml
+++ b/manifests/grafana/grafana.pvc.yaml
@@ -1,3 +1,11 @@
+apiVersion: storage.k8s.io/v1
+kind: StorageClass
+metadata:
+  name: ssd-grafana
+provisioner: kubernetes.io/aws-ebs
+parameters:
+  type: gp2
+---
 kind: PersistentVolumeClaim
 apiVersion: v1
 metadata:
@@ -7,5 +15,6 @@ spec:
     - ReadWriteOnce
   resources:
     requests:
-      storage: 1Gi
-  storageClassName: ssd
+      storage: 100Gi
+  storageClassName: ssd-grafana
+---
